[package]
name = "relabuf"
version = "0.1.0"
authors = ["Sergey F. <let4be@gmail.com>"]
edition = "2018"
description = "Release valve buffer release items either after time or number thresholds are reached"
readme = "README.md"
license = "MIT"
repository = "https://github.com/let4be/tracing-tools"
keywords = ["async", "buffer", "threshold", "rust"]

[dependencies]
futures-lite = "^1.11.3"
anyhow = "^1.0.40"
tokio = { version = "~1.6.0", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "macros", "signal", "sync"] }
flume = "~0.10.7"
